--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,3 +11,7 @@ html
     link(rel='stylesheet', href='stylesheets/index.css')
   body#contents
     block content
+    script(src="/socket.io/socket.io.js")
+    script(src="/jquery-2.1.4.min.js")
+    script(src="/vue.min.js")
+    script(src="/index.js")
