--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,8 @@ html
     title= title
     
     //- Load stylesheet
-    link(rel='stylesheet', href='stylesheets/bootstrap/css/bootstrap.min.css')
-    link(rel='stylesheet', href='stylesheets/index.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/index.css')
+    link(rel='stylesheet', href='/stylesheets/game.css')
   body#contents
     block content
