--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -4,18 +4,62 @@ body {
   position: relative;
 }
 
-.chat-window {
+.chat {
   position: absolute;
-  background-color: #DDDDDD;
+  background-color: #EEEEEE;
   width: 320px;
   height: 500px;
   top: 0px;
   right: 0px;
 }
 
-.chat-input {
-  background-color: red;
+.chat-window {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.chat-log {
+  overflow: scroll;
+  margin: 0px;
+  height: 468px;
+}
+
+.chat-log__item {
+  width: 200px;
+  padding: 11px;
+  margin-top: 11px;
+  margin-bottom: 11px;
+  list-style: none;
+  border-radius: 10px;
+}
+
+.chat-log__item--mine {
+  background-color: #BDEEFF;
+  margin-right: 11px;
+  margin-left: auto;
+}
+
+.chat-log__item--others {
+  background-color: #FFBDBD;
+  margin-right: auto;
+  margin-left: 11px;
+}
+
+.chat-form {
+  position: absolute;
+  background-color: #EEEEEE;
+  padding: 4px;
   width: 100%;
   height: 32px;
-  margin-bottom: 0px;
+  bottom: 0px;
+}
+
+.chat__input {
+  width: 80%;
+  margin-right: .5%;
+}
+
+.chat__send-btn {
+  width: 19%;
 }
